[package]
name = "acmed-hook-ssh"
version = "0.1.0"
authors = ["Jan Christian Grünhage <jan.christian@gruenhage.xyz>"]
edition = "2021"
description = "acmed hook for distributing certificats via ssh"
repository = "https://gitlab.com/famedly/infra/tools/acmed-hook-ssh"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
base64 = "0.21.0"
clap = { version = "4.2.4", features = ["derive"] }
happy-eyeballs = { version = "0.2.0", default-features = false, features = ["tokio"] }
once_cell = "1.17.1"
russh = { version = "0.37.1", features = ["openssl"] }
russh-keys = "0.37.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
time = { version = "0.3.21", features = ["local-offset", "formatting"] }
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros", "fs", "io-std"] }
trust-dns-client = "0.22.0"
trust-dns-resolver = { version = "0.22.0", features = ["dnssec-ring"] }
openssl = { version = "*", features = ["vendored"] }
serde_yaml = "0.9.21"
openssl-probe = "0.1.5"
